--- a/frontend/home.html
+++ b/frontend/home.html
@@ -43,9 +43,10 @@
                         <div class="inner">
                             <h2>格来格来 诗歌大数据</h2>
                             <p>
-                                这里需要有一些来装 B 的话语<br/>
-                                需要写的高大上一些 看着很 NB 的就可以了<br/>
-                                巴拉巴拉巴拉巴拉巴拉巴拉吧</a>.
+                                才高词美意幽远，隔日尤思绕梁韵。<br/>
+                                诗词是中华文化之瑰宝，三千年来我国诗人辈出，佳作如林。<br/>我们所熟知的诗词，或写景或叙事，或豪放或委婉，无不是作者的精辟之作。<br/>
+                                在文学殿堂的这朵奇葩里，<br/>有太白的云帆点缀了沧浪之水，有辛弃疾的醉眼迷离了月光剑影，<br/>有陆游的梦乡回荡着铁骑铮铮，有苏东坡的华发张扬着少年意气。<br/>
+                                品味诗词中的幽香，乐在其中，流连忘返。</a>
                             </p>
                             <ul class="actions special">
                                 <li><a href="#" class="button">开始探索</a></li>
@@ -64,9 +65,9 @@
                                     A QUANTITATIVE SOCIAL SCIENCE PROJECT
                                 </h2>
 								<p>
-                                    需要一些简要的介绍，就是想怎么吹这个
+                                    基于先秦到清代庞大的数据集，进行诗歌内容的预览和搜索。
                                     <br />
-                                    项目就怎么吹这个项目，没什么可讲的道理，就是三个字，使劲吹
+                                    基于大量诗词进行数据挖掘与分析，并进行可视化的社会科学展示。
                                 </p>
 							</header>
 							<ul class="icons major">
@@ -82,26 +83,26 @@
 						<section class="spotlight" id="s1">
 							<div class="image"><img src="static/homepage/images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>原始数据展示</h2>
-                                <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+                                <p>从先秦到清代，庞大的诗词宝库任君博览。</p>
                                 <a href="sd_index.html" class="button">EXPLORE</a>
 							</div>
 						</section>
 						<section class="spotlight" id="s2">
 							<div class="image"><img src="static/homepage/images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>数据分析成果</h2>
-                                <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+                                <p>针对诗词的内容，探索其中博大精深的奥妙。</p>
                                 <a href="#" class="button">EXPLORE</a>
 							</div>
 						</section>
 						<section class="spotlight" id="s3">
 							<div class="image"><img src="static/homepage/images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>人物时空关系可视化</h2>
-                                <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+                                <p>畅览在中华民族的古典文化里，直击诗人或闪耀或颠簸的一生。</p>
                                 <a href="route_map.html" class="button">EXPLORE</a>
 							</div>
                         </section>
                         <section class="spotlight" id="s4">
-                            <div class="image"><img src="static/homepage/images/pic02.jpg" alt="" /></div><div class="content">
+                            <div class="image"><img src="static/homepage/images/pic3.jpg" alt="" /></div><div class="content">
                                 <h2>And One More Thing</h2>
                                 <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
                                 <a href="#" class="button">EXPLORE</a>
