--- a/frontend/sd_index.html
+++ b/frontend/sd_index.html
@@ -180,11 +180,11 @@
                     <div class="col-lg-3 col-md-6" id="c1">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img1.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/秦.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">秦朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">秦朝</h4> <span class="text-muted">秦朝结束了自春秋战国以来五百年来诸侯分裂割据的局面，成为中国历史上首个大一统中央集权的封建王朝。</span>
                                 </div>
                             </div>
                         </div>
@@ -192,11 +192,11 @@
                     <div class="col-lg-3 col-md-6" id="c2">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img2.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/汉.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">汉朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">汉朝</h4> <span class="text-muted">汉朝是继秦朝之后的大一统王朝，是中国最强盛的时代之一，曾被列为当时世界上最先进的文明及强大帝国。</span>
                                 </div>
                             </div>
                         </div>
@@ -204,11 +204,11 @@
                     <div class="col-lg-3 col-md-6" id="c3">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img4.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/魏晋.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">魏晋</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">魏晋</h4> <span class="text-muted">魏晋时期国家政权更替频繁，思想自由开放，魏晋风流可谓影响深远。</span>
                                 </div>
                             </div>
                         </div>
@@ -216,11 +216,11 @@
                     <div class="col-lg-3 col-md-6" id="c4">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img3.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/南北朝.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">南北朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">南北朝</h4> <span class="text-muted">南北朝时期是中国历史上的一段大分裂时期，是中国历史上的一段民族大融合时期。</span>
                                 </div>
                             </div>
                         </div>
@@ -228,11 +228,11 @@
                     <div class="col-lg-3 col-md-6" id="c5">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img4.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/隋朝.jpeg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">隋朝</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">隋朝</h4> <span class="text-muted">隋朝是中国历史上承南北朝下启唐朝的大一统王朝，是结束了中华数百年分裂、施行三省六部制、创立科举制、开凿大运河的帝国。</span>
                                 </div>
                             </div>
                         </div>
@@ -240,11 +240,11 @@
                     <div class="col-lg-3 col-md-6" id="c6">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img3.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/唐朝.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">唐代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">唐代</h4> <span class="text-muted">唐朝是版图最大，亦是唯一未修建长城的大一统中原王朝，是公认的中国最强盛的时代之一，声誉远扬海外。</span>
                                 </div>
                             </div>
                         </div>
@@ -252,11 +252,11 @@
                     <div class="col-lg-3 col-md-6" id="c7">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img5.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/宋朝.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">宋代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">宋代</h4> <span class="text-muted">宋朝是中国历史上承五代十国下启元朝的朝代，是中国历史上商品经济、文化教育、科学创新高度繁荣的时代，并且是唯独没有亡于内乱的王朝。</span>
                                 </div>
                             </div>
                         </div>
@@ -264,11 +264,11 @@
                     <div class="col-lg-3 col-md-6" id="c8">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img6.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/辽.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">辽代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">辽代</h4> <span class="text-muted">辽朝是中国历史上由契丹族建立的封建王朝，开创两院制的政治体制，创造契丹文字，吸收渤海国、五代、北宋、西夏以及西域各国的文化，有效促进了各方面的发展。</span>
                                 </div>
                             </div>
                         </div>
@@ -276,11 +276,11 @@
                     <div class="col-lg-3 col-md-6" id="c9">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img1.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/金.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">金代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">金代</h4> <span class="text-muted">金朝是中国历史上由女真族建立的封建王朝，其作为征服王朝，部落制度十分浓厚。</span>
                                 </div>
                             </div>
                         </div>
@@ -288,11 +288,11 @@
                     <div class="col-lg-3 col-md-6" id="c10">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img1.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/元.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">元代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">元代</h4> <span class="text-muted">元朝是中国历史上首次由少数民族建立的大一统王朝，开中国行省制度之先河，中断了唐宋变革的进程，深刻重塑了宋后中国的历史。</span>
                                 </div>
                             </div>
                         </div>
@@ -300,11 +300,11 @@
                     <div class="col-lg-3 col-md-6" id="c11">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img2.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/明.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">明代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">明代</h4> <span class="text-muted">明朝是一个由汉族建立的大一统王朝，是继汉唐之后的黄金时期，无汉之外戚、唐之藩镇、宋之岁币，天子守国门，君王死社稷。</span>
                                 </div>
                             </div>
                         </div>
@@ -312,11 +312,11 @@
                     <div class="col-lg-3 col-md-6" id="c12">
                         <div class="card card-hover">
                             <div class="el-card-item">
-                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/img3.jpg"
+                                <div class="el-card-avatar el-overlay-1"> <img src="../static/assets/images/big/清.jpg"
                                         alt="user" />
                                 </div>
                                 <div class="el-card-content">
-                                    <h4 class="m-b-0">清代</h4> <span class="text-muted">各个朝代的描述信息，之后写</span>
+                                    <h4 class="m-b-0">清代</h4> <span class="text-muted">清朝是中国历史上最后一个大一统封建王朝，最终确定了中国近代的版图，积极维护国家领土主权的完整，但同时也将封建专制推向了最高峰。</span>
                                 </div>
                             </div>
                         </div>
