MOD: a little adjust for index page

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -49,7 +49,7 @@
                                 品味诗词中的幽香，乐在其中，流连忘返。</a>
                             </p>
                             <ul class="actions special">
-                                <li><a href="#" class="button">开始探索</a></li>
+                                <li><a href="#one" class="button scrolly">开始探索</a></li>
                             </ul>
                         </div>
 						<a href="#one" class="more scrolly">LEARN MORE</a>
@@ -71,7 +71,7 @@
                                 </p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-star-o major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
@@ -91,7 +91,7 @@
 							<div class="image"><img src="static/homepage/images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>数据分析成果</h2>
                                 <p>针对诗词的内容，探索其中博大精深的奥妙。</p>
-                                <a href="#" class="button">EXPLORE</a>
+                                <a href="network.html" class="button">EXPLORE</a>
 							</div>
 						</section>
 						<section class="spotlight" id="s3">
@@ -164,11 +164,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-                            <li><a href="#" class="icon fa-wechat"><span class="label">Wechat</span></a></li>
-							<li><a href="#" class="icon fa-weibo"><span class="label">Weibo</span></a></li>
-							<li><a href="#" class="icon fa-edge"><span class="label">Edge</span></a></li>
-							<li><a href="#" class="icon fa-chrome"><span class="label">Chrome</span></a></li>
-							<li><a href="#" class="icon fa-firefox"><span class="label">FireFox</span></a></li>
+							<li><a class="icon fa-chrome"><span class="label">Chrome</span></a></li>
+                            <li><a class="icon fa-edge"><span class="label">Edge</span></a></li>
+							<li><a class="icon fa-firefox"><span class="label">FireFox</span></a></li>
+                            <li><a class="icon fa-opera"><span class="label">Wechat</span></a></li>
+                            <li><a class="icon fa-safari"><span class="label">Weibo</span></a></li>
 						</ul>
 						<ul class="copyright">
                             <li>&copy;2018 BUPT-SCS Data of Science and Service Center. All Rights Reserved.</li>
