--- a/frontend/home.html
+++ b/frontend/home.html
@@ -105,7 +105,7 @@
                             <div class="image"><img src="static/homepage/images/pic3.jpg" alt="" /></div><div class="content">
                                 <h2>And One More Thing</h2>
                                 <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-                                <a href="#" class="button">EXPLORE</a>
+                                <a href="onemorething.html" class="button">EXPLORE</a>
                             </div>
                         </section>       
 					</section>
