--- a/frontend/sd_dynasty.html
+++ b/frontend/sd_dynasty.html
@@ -90,6 +90,12 @@
                     <ul class="navbar-nav float-left mr-auto">
                         <li class="nav-item d-none d-md-block"><a class="nav-link sidebartoggler waves-effect waves-light"
                                 href="javascript:void(0)" data-sidebartype="mini-sidebar"><i class="mdi mdi-menu font-24"></i></a></li>
+                        
+                        <li class="nav-item d-none d-md-block">
+                            <a id="btn_up" class="nav-link waves-effect waves-light" href="sd_index.html">
+                                <i class="mdi mdi-arrow-up font-24"></i>
+                            </a>
+                        </li>
                         <!-- ============================================================== -->
                         <!-- Search -->
                         <!-- ============================================================== -->
