--- a/frontend/network.html
+++ b/frontend/network.html
@@ -157,7 +157,64 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_3" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_4" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_5" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_6" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_7" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_8" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_9" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12" id="c1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div id="nw_10" style="width:100%; height:700px"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
@@ -203,7 +260,11 @@
     <!--This page JavaScript -->
     <script src="static/lib/echarts.js"></script>
     <script src="static/lib/dataTool.min.js"></script>
-    <script src="static/js/network.js"></script>
+    <script src="static/js/network_tang.js"></script>
+    <script src="static/js/network_yuan.js"></script>
+    <script src="static/js/network_song.js"></script>
+    <script src="static/js/network_ming.js"></script>
+    <script src="static/js/network_qing.js"></script>
 
 
 </body>
