[ADD]: 2021.4.2 Add more and mod text for Software Work.

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -28,7 +28,8 @@
                                             <li><a href="#s1" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;数据展示</a></li>
                                             <li><a href="#s2" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;数据分析</a></li>
                                             <li><a href="#s3" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;人物时空关系地图</a></li>
-                                            <li><a href="#s4" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;One More Thing</a></li>
+											<li><a href="#s4" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;诗词大数据分析</a></li>
+                                            <li><a href="#s5" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;One More Thing</a></li>
                                             <li><a href="#three" class="scrolly">成果总结</a></li>
 											<li><a href="#cta" class="scrolly">联系我们</a></li>
 										</ul>
@@ -101,10 +102,17 @@
                                 <a href="route_map.html" class="button">EXPLORE</a>
 							</div>
                         </section>
-                        <section class="spotlight" id="s4">
+						<section class="spotlight" id="s4">
+                            <div class="image"><img src="static/homepage/images/pic4.jpg" alt="" /></div><div class="content">
+                                <h2>诗词大数据分析</h2>
+                                <p>隐藏在诗词中的大数据精髓，以现代 Web 可视化进行展示。</p>
+                                <a href="http://localhost:5000" class="button">EXPLORE</a>
+                            </div>
+                        </section>
+                        <section class="spotlight" id="s5">
                             <div class="image"><img src="static/homepage/images/pic3.jpg" alt="" /></div><div class="content">
                                 <h2>And One More Thing</h2>
-                                <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+                                <p>对本项目无比支持的人文学院徐老师诗歌集</p>
                                 <a href="onemorething.html" class="button">EXPLORE</a>
                             </div>
                         </section>       
@@ -115,33 +123,32 @@
 						<div class="inner">
 							<header class="major">
 								<h2>我们取得的成果</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<p>中国传统古诗文，是中华人民智慧与文化的结晶，字里行间寄托着古人的情感，穿插着古景风情。正如在信息互联网时代，维系着社交群体信息交换的载体——微博、朋友圈，记录着现代人群个体的心理变化、游历过程、未来行动等行为模式一样，古诗文在一定程度上，就相当于古代的微博，其中蕴含着各朝代各作者的思想行为、心理感慨、游历迁徙、以及行为动机，是仅次于正统史书的古代人群行为模式最为丰富的文本载体。</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>数据集处理</h3>
+									<p>我们的数据集横跨先秦到清朝，规模庞大，处理数据将面临文体风格变迁等方面的挑战。</p>
 								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>统计计量分析</h3>
+									<p>对古诗文中的常用字词进行了跨朝代的趋势的统计分析与演化。</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>网络科学分析</h3>
+									<p>基于网络科学图计算的角度，对数据进行分析，并进行可视化展示。</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>可视化轨迹迁徙</h3>
+									<p>对诗人的可视化行为进行迁徙分析与可视化展示，直观感受地理时空可视化。</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>地理位置影响力</h3>
+									<p>利用诗词中的诗人轨迹数据，对地理位置的重要成都进行网络建模和展示。</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>意象分析</h3>
+									<p>常见意象、风景、季节、节气、颜色，在各个朝代诗词中占比的趋势变化。</p>
 								</li>
 							</ul>
 						</div>
@@ -152,7 +159,7 @@
 						<div class="inner">
 							<header>
 								<h2>对这个项目感兴趣？</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<p>联系我们以取得更多关于格来格来大数据诗词网站项目的信息，或者参与贡献其中！</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary"><span class="icon fa-envelope"></span> 联系我们</a></li>
