--- a/frontend/route_map.html
+++ b/frontend/route_map.html
@@ -146,7 +146,7 @@
                     <div class="col-lg-12 col-md-12" id="c1">
                         <div class="card">
                             <div class="card-body">
-                                <iframe id="ifr" src="http://127.0.0.1:8080/jpkc/geolocation.html" frameborder="0" width="100%" height="100%"></iframe>
+                                <iframe id="ifr" src="http://localhost:8080/jpkc/geolocation.html" frameborder="0" width="100%" height="100%"></iframe>
                             </div>
                         </div>
                     </div>
