[MOD]: 2021.4.2 Mod the text for the homepage

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -90,8 +90,8 @@
 						</section>
 						<section class="spotlight" id="s2">
 							<div class="image"><img src="static/homepage/images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>数据分析成果</h2>
-                                <p>针对诗词的内容，探索其中博大精深的奥妙。</p>
+								<h2>诗词人物关系网</h2>
+                                <p>针对诗词的内容，探索作者之间关系的博大精深的奥妙。</p>
                                 <a href="network.html" class="button">EXPLORE</a>
 							</div>
 						</section>
@@ -106,7 +106,7 @@
                             <div class="image"><img src="static/homepage/images/pic4.jpg" alt="" /></div><div class="content">
                                 <h2>诗词大数据分析</h2>
                                 <p>隐藏在诗词中的大数据精髓，以现代 Web 可视化进行展示。</p>
-                                <a href="http://localhost:5000" class="button">EXPLORE</a>
+                                <a href="http://localhost:3000" class="button">EXPLORE</a>
                             </div>
                         </section>
                         <section class="spotlight" id="s5">
