[MOD]: 2021.4.2 Mod the text

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -178,8 +178,8 @@
                             <li><a class="icon fa-safari"><span class="label">Weibo</span></a></li>
 						</ul>
 						<ul class="copyright">
-                            <li>&copy;2018 BUPT-SCS Data of Science and Service Center. All Rights Reserved.</li>
-                            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                            <li>&copy;2021 BUPT-SCS Data of Science and Service Center. All Rights Reserved.</li>
+                            <li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
