[MOD]: 2021.4.3 Mod the index page menu text

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -26,7 +26,7 @@
                                             <li><a href="#banner" class="scrolly">主页</a></li>
                                             <li><a href="#one" class="scrolly">项目介绍</a></li>
                                             <li><a href="#s1" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;数据展示</a></li>
-                                            <li><a href="#s2" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;数据分析</a></li>
+                                            <li><a href="#s2" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;诗词人物关系网</a></li>
                                             <li><a href="#s3" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;人物时空关系地图</a></li>
 											<li><a href="#s4" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;诗词大数据分析</a></li>
                                             <li><a href="#s5" class="scrolly">&nbsp;&nbsp;&middot;&nbsp;&nbsp;One More Thing</a></li>
