--- a/frontend/home.html
+++ b/frontend/home.html
@@ -162,8 +162,8 @@
 								<p>联系我们以取得更多关于格来格来大数据诗词网站项目的信息，或者参与贡献其中！</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary"><span class="icon fa-envelope"></span> 联系我们</a></li>
-								<li><a href="#" class="button fit"><span class="icon fa-github"></span> STAR/FORK</a></li>
+								<li><a href="sigmarising@bupt.edu.cn" class="button fit primary"><span class="icon fa-envelope"></span> 联系我们</a></li>
+								<li><a href="https://github.com/sigmarising" class="button fit"><span class="icon fa-github"></span> STAR/FORK</a></li>
 							</ul>
 						</div>
 					</section>
