[MOD]: 2021.4.13 Mod the copyright info to system's name

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -112,7 +112,7 @@
                         <section class="spotlight" id="s5">
                             <div class="image"><img src="static/homepage/images/pic3.jpg" alt="" /></div><div class="content">
                                 <h2>And One More Thing</h2>
-                                <p>对本项目无比支持的人文学院徐老师诗歌集</p>
+                                <p>对本项目无比支持的徐怀静的双语诗歌集</p>
                                 <a href="onemorething.html" class="button">EXPLORE</a>
                             </div>
                         </section>       
@@ -122,7 +122,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>我们取得的成果</h2>
+								<h2>取得的成果</h2>
 								<p>中国传统古诗文，是中华人民智慧与文化的结晶，字里行间寄托着古人的情感，穿插着古景风情。正如在信息互联网时代，维系着社交群体信息交换的载体——微博、朋友圈，记录着现代人群个体的心理变化、游历过程、未来行动等行为模式一样，古诗文在一定程度上，就相当于古代的微博，其中蕴含着各朝代各作者的思想行为、心理感慨、游历迁徙、以及行为动机，是仅次于正统史书的古代人群行为模式最为丰富的文本载体。</p>
 							</header>
 							<ul class="features">
@@ -159,7 +159,7 @@
 						<div class="inner">
 							<header>
 								<h2>对这个项目感兴趣？</h2>
-								<p>联系我们以取得更多关于格来格来大数据诗词网站项目的信息，或者参与贡献其中！</p>
+								<p>联系以取得更多关于格来格来大数据诗词网站项目的信息，或者参与贡献其中！</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="sigmarising@bupt.edu.cn" class="button fit primary"><span class="icon fa-envelope"></span> 联系我们</a></li>
@@ -178,8 +178,7 @@
                             <li><a class="icon fa-safari"><span class="label">Weibo</span></a></li>
 						</ul>
 						<ul class="copyright">
-                            <li>&copy;2021 BUPT-SCS Data of Science and Service Center. All Rights Reserved.</li>
-                            <li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
+                            <li>2021 GeLai Poetry Big Data Visualization System</li>
 						</ul>
 					</footer>
 
