--- a/frontend/network.html
+++ b/frontend/network.html
@@ -170,7 +170,7 @@
             <!-- footer -->
             <!-- ============================================================== -->
             <footer class="footer text-center">
-                &copy 2021 BUPT-SCS Data of Science and Service Center. All Rights Reserved.
+                2021 GeLai Poetry Big Data Visualization System
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
