--- a/frontend/onemorething.html
+++ b/frontend/onemorething.html
@@ -97,8 +97,9 @@
         <div class="my-auto">
           <h1 class="mb-0">徐<span class="text-primary">怀静</span></h1>
           <div class="subheading mb-5" style="margin-top: 20px">
-            北京邮电大学 人文学院 教授
-            <a href="">@bupt.edu.cn</a>
+            <!-- 北京邮电大学 人文学院 教授
+            <a href="">@bupt.edu.cn</a> -->
+            诗集作者简介
           </div>
           <p class="lead mb-5">
             1992年获上海外国语大学英语语言文学学士学位，2001年获北京外国语大学英语语言文学硕士学位，2004年获北京师范大学英语语言文学博士学位，2005年8月－2006年8月在耶鲁大学做研究。专注于诗歌创作与文学批评。著有双语诗集《在郁金香的光泽中》，文学专著有《悬崖上的舞蹈：边缘电影三十部》，《铁背心：田纳西·威廉姆斯的剧作中遭受困惑的男人们》（该书获北京市理论著作基金出版资助），《抒情与现实的颜色：英语电影批评》。在《读书》、《书城》、《外国文学评论》、《外国文学研究》、《当代电影》等发表了三十多篇学术论文。译著有《艺术光晕中的电影》（撰写译者序“艺术电影与精英批评”）。
